# provoit-types

./: Cargo.toml  README.md
.github/workflows/: ci.yml
migrations/2023-05-12-075345_create_users/: up.sql
migrations/2023-05-22-061038_create_vehicle_types/: down.sql  up.sql
migrations/2023-05-23-101531_create_road_types/: down.sql  up.sql
migrations/2023-05-23-122448_create_frequencies/: down.sql  up.sql
migrations/2023-05-23-123955_create_days/: down.sql  up.sql
migrations/2023-05-25-125432_create_users/: up.sql
migrations/2023-05-27-155728_create_timings/: down.sql  up.sql
migrations/2023-06-06-153159_create_vehicles/: down.sql  up.sql
migrations/2023-06-07-082126_create_trips/: down.sql  up.sql
migrations/2023-06-07-131210_create_trip_road_types/: down.sql  up.sql
migrations/2023-06-07-143051_create_user_trips_model/: down.sql  up.sql
src/: lib.rs  migrations.rs  models.rs  schema.rs
src/models/: creation.rs  days.rs  frequencies.rs  road_types.rs  timings.rs  trip_road_types.rs  trips.rs  user.rs  user_trips.rs  users.rs  vehicle_types.rs  vehicles.rs
