[package]
name = "provoit-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Date and time handling
chrono = { version = "0.4.24", default-features = false, features = ["std", "serde"] }
# ORM
diesel = { version = "2.0.4", features = ["mysql", "chrono"], optional = true }
# ORM subpackage to embed migration files in the binary
diesel_migrations = { version = "2.0.0", features = ["mysql"], optional = true }
# De facto lib for serializing and deserializing
serde = { version = "1.0.163", features = ["derive"] }


[profile.release]
lto = true
strip = true


[features]
diesel = ["dep:diesel", "dep:diesel_migrations"]
